apps/formapi/base/formapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: formapi
spec:
  selector:
    matchLabels:
      app: formapi
      tier: api
  template:
    metadata:
      labels:
        app: formapi
        tier: api
    spec:
      containers:
        - name: node
          image: quicklookup/formapi:b6f1879
          resources:
            requests:
              cpu: 200m
              memory: 200Mi
          volumeMounts:
            - mountPath: /cdn
              name: cdn
          ports:
            - containerPort: 3001
          livenessProbe:
            httpGet:
              port: 3001
              path: /form-api/status/alive
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            httpGet:
              port: 3001
              path: /form-api/status/ready
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
      imagePullSecrets:
        - name: dockerlock
      volumes:
        - name: cdn
          hostPath:
            path: /data/cdn
