apps/formapi/base/formapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: formapi
  labels:
    app: formapi
    tier: api
spec:
  type: NodePort
  ports:
    - port: 3001
  selector:
    app: formapi
    tier: api
