apps/formapi/base/formapi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: formapi
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
    - host: forms-api.contextsuite.com
      http:
        paths:
          - backend:
              service:
                name: formapi
                port:
                  number: 3001
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - forms-api.contextsuite.com
      secretName: forms-api-contextsuite-com-tls
